force-app/main/default/objects/Incident__c/fields/Actions_taken__c.field-meta.xml
<CustomField>
    <fullName>Actions_taken__c</fullName>
    <label>Actions taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>