force-app/main/default/objects/Incident__c/fields/Affected_Person__c.field-meta.xml
<CustomField>
    <fullName>Affected_Person__c</fullName>
    <label>Affected Person</label>
    <type>TextArea</type>
</CustomField>