force-app/main/default/objects/Incident__c/fields/Body_Part_Injured__c.field-meta.xml
<CustomField>
    <fullName>Body_Part_Injured__c</fullName>
    <label>Body Part Injured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Arms</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Buttock</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Ear</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Eyes</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Fingers</fullName>
            </value>
            <value>
                <fullName>Forearm</fullName>
            </value>
            <value>
                <fullName>Groin</fullName>
            </value>
            <value>
                <fullName>Hands</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Heel</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Legs</fullName>
            </value>
            <value>
                <fullName>Low leg</fullName>
                <isActive>false</isActive>
                <label>Low leg</label>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>No injury</fullName>
                <isActive>false</isActive>
                <label>No injury</label>
            </value>
            <value>
                <fullName>Nose</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Palm</fullName>
            </value>
            <value>
                <fullName>Pelvis</fullName>
            </value>
            <value>
                <fullName>Scalp</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>