force-app/main/default/objects/Incident__c/fields/Call_Details__c.field-meta.xml
<CustomField>
    <fullName>Call_Details__c</fullName>
    <inlineHelpText>What has been passed onto the Emergency Contact</inlineHelpText>
    <label>Call Details</label>
    <type>TextArea</type>
</CustomField>