force-app/main/default/objects/Incident__c/fields/Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reason__c</fullName>
    <label>Complaint Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CQ Staff Member</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>CQ Program, Service or Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>