force-app/main/default/objects/Incident__c/fields/Corrective_Actions_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Actions_Recommended__c</fullName>
    <label>Corrective Actions Recommended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>