force-app/main/default/objects/Incident__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rec Programs</fullName>
            </value>
            <value>
                <fullName>CPEP</fullName>
            </value>
            <value>
                <fullName>Family Support &amp; Retreats</fullName>
                <label>Family Support and Getaways</label>
            </value>
            <value>
                <fullName>MOE</fullName>
                <label>Major Events</label>
            </value>
            <value>
                <fullName>Community Fundraising</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Camp Quality</fullName>
            </value>
            <value>
                <fullName>WHS</fullName>
            </value>
            <value>
                <fullName>Marketing and Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>