force-app/main/default/objects/Incident__c/fields/Description_of_damage__c.field-meta.xml
<CustomField>
    <fullName>Description_of_damage__c</fullName>
    <label>Damages description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>