force-app/main/default/objects/Incident__c/fields/Emergency_Contact_Notified__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Notified__c</fullName>
    <label>Emergency Contact Notified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>