force-app/main/default/objects/Incident__c/fields/Estimated_Damage__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Damage__c</fullName>
    <label>Estimated Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Write Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>