force-app/main/default/objects/Incident__c/fields/Event_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Program_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the event or program the incident occurred on.</inlineHelpText>
    <label>Event/Program Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>