force-app/main/default/objects/Incident__c/fields/Event_Program_Name_Submission__c.field-meta.xml
<CustomField>
    <fullName>Event_Program_Name_Submission__c</fullName>
    <label>Event/Program Name Submission</label>
    <type>TextArea</type>
</CustomField>