force-app/main/default/objects/Incident__c/fields/Family_Member_Involved__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Involved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field to the family member involved in the incident</description>
    <label>Family Member Involved</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents (Family Member Involved)</relationshipLabel>
    <relationshipName>Family_Member_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>