force-app/main/default/objects/Incident__c/fields/First_Aid_provided__c.field-meta.xml
<CustomField>
    <fullName>First_Aid_provided__c</fullName>
    <inlineHelpText>What actions did the first aider take after the incident occured</inlineHelpText>
    <label>First Aid provided</label>
    <type>TextArea</type>
</CustomField>