force-app/main/default/objects/Incident__c/fields/First_Aider__c.field-meta.xml
<CustomField>
    <fullName>First_Aider__c</fullName>
    <inlineHelpText>Person who applied first aid at the incident.</inlineHelpText>
    <label>First Aider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>