force-app/main/default/objects/Incident__c/fields/Fleet_Vehicle_Asset__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Vehicle_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fleet Vehicle Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>