force-app/main/default/objects/Incident__c/fields/Fleet_Vehicle_Asset_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Vehicle_Asset_Submitted__c</fullName>
    <label>Fleet Vehicle Asset Submitted</label>
    <type>TextArea</type>
</CustomField>