force-app/main/default/objects/Incident__c/fields/Follow_up_with_Affected_Person__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_with_Affected_Person__c</fullName>
    <label>Follow up with Affected Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>