force-app/main/default/objects/Incident__c/fields/Incident_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Close_Date__c</fullName>
    <label>Incident Close Date</label>
    <type>Date</type>
</CustomField>