force-app/main/default/objects/Incident__c/fields/Incident_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_Time__c</fullName>
    <description>When did the incident occur, can be different to incident submission date.</description>
    <label>Incident Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>