force-app/main/default/objects/Incident__c/fields/Incident_description__c.field-meta.xml
<CustomField>
    <fullName>Incident_description__c</fullName>
    <label>Incident description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>