force-app/main/default/objects/Incident__c/fields/Incident_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Reviewed_Date__c</fullName>
    <label>Incident Reviewed Date</label>
    <type>Date</type>
</CustomField>