force-app/main/default/objects/Incident__c/fields/Incident_Summary__c.field-meta.xml
<CustomField>
    <fullName>Incident_Summary__c</fullName>
    <inlineHelpText>For internal use only</inlineHelpText>
    <label>Incident Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>