force-app/main/default/objects/Incident__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavioural</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Medication Error</fullName>
            </value>
            <value>
                <fullName>Near Miss/Hazard</fullName>
            </value>
            <value>
                <fullName>Safeguarding Children</fullName>
            </value>
            <value>
                <fullName>Customer/Client Complaint</fullName>
            </value>
            <value>
                <fullName>Camp Quality Vehicle Incident</fullName>
            </value>
            <value>
                <fullName>Lost, Stolen or Damaged Equipment/Property</fullName>
            </value>
            <value>
                <fullName>Breach/Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>