force-app/main/default/objects/Incident__c/fields/Injuries_sustained__c.field-meta.xml
<CustomField>
    <fullName>Injuries_sustained__c</fullName>
    <label>Injuries sustained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>