force-app/main/default/objects/Incident__c/fields/Mandatory_Report__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a mandatory reported incident</description>
    <inlineHelpText>Is this a mandatory reported incident</inlineHelpText>
    <label>Mandatory Report</label>
    <type>Checkbox</type>
</CustomField>