force-app/main/default/objects/Incident__c/fields/Medication_Error_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Medication_Error_Date_Time__c</fullName>
    <label>Medication Error Date/Time</label>
    <type>DateTime</type>
</CustomField>