force-app/main/default/objects/Incident__c/fields/Medication_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Medication_Error_Description__c</fullName>
    <label>Medication Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>