force-app/main/default/objects/Incident__c/fields/Nature_of_bodily_injury__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_bodily_injury__c</fullName>
    <label>Nature of bodily injury</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amputation</fullName>
            </value>
            <value>
                <fullName>Burn</fullName>
            </value>
            <value>
                <fullName>Slips, trips and falls</fullName>
            </value>
            <value>
                <fullName>Laceration</fullName>
            </value>
            <value>
                <fullName>Dislocation</fullName>
            </value>
            <value>
                <fullName>Hand mark</fullName>
            </value>
            <value>
                <fullName>Abrasion</fullName>
            </value>
            <value>
                <fullName>Sprain</fullName>
            </value>
            <value>
                <fullName>Concussion</fullName>
            </value>
            <value>
                <fullName>Fracture</fullName>
            </value>
            <value>
                <fullName>Fatality</fullName>
            </value>
            <value>
                <fullName>Bruise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bite</fullName>
            </value>
            <value>
                <fullName>TEST</fullName>
                <isActive>false</isActive>
                <label>TEST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>