force-app/main/default/objects/Incident__c/fields/Observed_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Observed_Triggers__c</fullName>
    <label>Observed Triggers</label>
    <type>TextArea</type>
</CustomField>