force-app/main/default/objects/Incident__c/fields/Other_Party_Drivers_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Drivers_License_Number__c</fullName>
    <label>Other Party Drivers License Number</label>
    <type>TextArea</type>
</CustomField>