force-app/main/default/objects/Incident__c/fields/Other_Party_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Email__c</fullName>
    <label>Other Party Email</label>
    <type>Email</type>
</CustomField>