force-app/main/default/objects/Incident__c/fields/Other_party_involved__c.field-meta.xml
<CustomField>
    <fullName>Other_party_involved__c</fullName>
    <label>Other party involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>