force-app/main/default/objects/Incident__c/fields/Other_Party_License_State__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_License_State__c</fullName>
    <label>Other Party License State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>