force-app/main/default/objects/Incident__c/fields/Other_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Name__c</fullName>
    <label>Other Party Name</label>
    <type>TextArea</type>
</CustomField>