force-app/main/default/objects/Incident__c/fields/Other_Party_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Phone__c</fullName>
    <label>Other Party Phone</label>
    <type>Phone</type>
</CustomField>