force-app/main/default/objects/Incident__c/fields/Other_Party_Registration__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Registration__c</fullName>
    <label>Other Party Registration Number</label>
    <type>TextArea</type>
</CustomField>