force-app/main/default/objects/Incident__c/fields/Outcome_of_actions__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_actions__c</fullName>
    <label>Outcome of actions</label>
    <type>TextArea</type>
</CustomField>