force-app/main/default/objects/Incident__c/fields/Person_Affected__c.field-meta.xml
<CustomField>
    <fullName>Person_Affected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Affected</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>