force-app/main/default/objects/Incident__c/fields/Personal_Information_details__c.field-meta.xml
<CustomField>
    <fullName>Personal_Information_details__c</fullName>
    <label>Personal Information details</label>
    <type>TextArea</type>
</CustomField>