force-app/main/default/objects/Incident__c/fields/Personal_information_risk__c.field-meta.xml
<CustomField>
    <fullName>Personal_information_risk__c</fullName>
    <inlineHelpText>Was there personal information stored on the device or in the system that was stolen/hacked?</inlineHelpText>
    <label>Personal information at risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>