force-app/main/default/objects/Incident__c/fields/Pharmacist_Name__c.field-meta.xml
<CustomField>
    <fullName>Pharmacist_Name__c</fullName>
    <label>Pharmacist Name</label>
    <type>TextArea</type>
</CustomField>