force-app/main/default/objects/Incident__c/fields/Pharmacist_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Pharmacist_Notified_Date__c</fullName>
    <label>Pharmacist Notified Date</label>
    <type>Date</type>
</CustomField>