force-app/main/default/objects/Incident__c/fields/Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name__c</fullName>
    <label>Physician Name</label>
    <type>TextArea</type>
</CustomField>