force-app/main/default/objects/Incident__c/fields/Physician_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Physician_Notified_Date__c</fullName>
    <label>Physician Notified Date</label>
    <type>Date</type>
</CustomField>