force-app/main/default/objects/Incident__c/fields/Property_damaged__c.field-meta.xml
<CustomField>
    <fullName>Property_damaged__c</fullName>
    <label>Property damaged?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>