force-app/main/default/objects/Incident__c/fields/Reported_Person__c.field-meta.xml
<CustomField>
    <fullName>Reported_Person__c</fullName>
    <inlineHelpText>Person you are reporting for behaviour/complaints</inlineHelpText>
    <label>Person you&apos;re reporting:</label>
    <length>200</length>
    <type>Text</type>
</CustomField>