force-app/main/default/objects/Incident__c/fields/Reporter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Phone__c</fullName>
    <inlineHelpText>Only used when the person reporting the incident is not a staff member</inlineHelpText>
    <label>Reporter Phone</label>
    <type>Phone</type>
</CustomField>