force-app/main/default/objects/Incident__c/fields/Reporters_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporters_Email__c</fullName>
    <inlineHelpText>Only used when the reporter of the incident is not a staff member</inlineHelpText>
    <label>Reporters Email</label>
    <type>Email</type>
</CustomField>