force-app/main/default/objects/Incident__c/fields/Reporters_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporters_Name__c</fullName>
    <label>Reporters Name</label>
    <type>TextArea</type>
</CustomField>