force-app/main/default/objects/Incident__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>how severe was the incident</description>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insignificant</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
                <isActive>false</isActive>
                <label>Severe</label>
            </value>
            <value>
                <fullName>Significant</fullName>
                <isActive>false</isActive>
                <label>Significant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>