force-app/main/default/objects/Incident__c/fields/Staff_Volunteers_Involved__c.field-meta.xml
<CustomField>
    <fullName>Staff_Volunteers_Involved__c</fullName>
    <label>Staff/Volunteers Involved:</label>
    <type>TextArea</type>
</CustomField>