force-app/main/default/objects/Incident__c/fields/Stakeholder_s_Involved__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_s_Involved__c</fullName>
    <description>Main classification of the person affected. Mainly for reporting purposes.</description>
    <label>Stakeholder/s Involved</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
                <default>true</default>
                <label>Child</label>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Event/Program Participant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>