force-app/main/default/objects/Incident__c/fields/Stakeholder_s_Other__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_s_Other__c</fullName>
    <label>Stakeholder/s Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>