force-app/main/default/objects/Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Pending Actions</fullName>
            </value>
            <value>
                <fullName>Closed- Inactive</fullName>
            </value>
            <value>
                <fullName>Closed- Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>