force-app/main/default/objects/Incident__c/fields/Supervisor_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Notified_Date__c</fullName>
    <label>Supervisor Notified Date</label>
    <type>Date</type>
</CustomField>