force-app/main/default/objects/Incident__c/fields/Systems_Affected__c.field-meta.xml
<CustomField>
    <fullName>Systems_Affected__c</fullName>
    <inlineHelpText>Programs/Applications that you think were breached or at risk</inlineHelpText>
    <label>Systems Affected</label>
    <type>TextArea</type>
</CustomField>