force-app/main/default/objects/Incident__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bullying</fullName>
            </value>
            <value>
                <fullName>Danger to self / self-harm</fullName>
            </value>
            <value>
                <fullName>Emotional or Psychological</fullName>
            </value>
            <value>
                <fullName>Exposure to Family Violence</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Harm</fullName>
            </value>
            <value>
                <fullName>Neglect</fullName>
            </value>
            <value>
                <fullName>Physical</fullName>
            </value>
            <value>
                <fullName>Sexual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>