force-app/main/default/objects/Incident__c/fields/Type_of_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Behaviour__c</fullName>
    <label>Type of Behaviour</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harm to Self</fullName>
            </value>
            <value>
                <fullName>Drugs or Alcohol</fullName>
            </value>
            <value>
                <fullName>Non-compliance with direction(s)</fullName>
            </value>
            <value>
                <fullName>Verbal altercation/abuse</fullName>
            </value>
            <value>
                <fullName>Property Damage</fullName>
            </value>
            <value>
                <fullName>Harm to others</fullName>
            </value>
            <value>
                <fullName>Inappropriate Language</fullName>
            </value>
            <value>
                <fullName>Absconding</fullName>
            </value>
            <value>
                <fullName>Physical Threat</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Bullying or Harassment</fullName>
            </value>
            <value>
                <fullName>all of the above</fullName>
                <isActive>false</isActive>
                <label>all of the above</label>
            </value>
            <value>
                <fullName>other behaviour</fullName>
                <isActive>false</isActive>
                <label>other behaviour</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>