force-app/main/default/objects/Incident__c/fields/Type_of_Medication_Error__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Medication_Error__c</fullName>
    <label>Type of Medication Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medication spilt/dropped</fullName>
                <default>true</default>
                <label>Medication spilt/dropped</label>
            </value>
            <value>
                <fullName>Medication given to the wrong person</fullName>
            </value>
            <value>
                <fullName>Client allergic to medication</fullName>
            </value>
            <value>
                <fullName>Medication not given at the right time</fullName>
            </value>
            <value>
                <fullName>Shift to Shift count on controlled medication not accurate</fullName>
            </value>
            <value>
                <fullName>Incorrect supply of medication from pharmacy</fullName>
            </value>
            <value>
                <fullName>Wrong medication given</fullName>
            </value>
            <value>
                <fullName>Medication not given</fullName>
            </value>
            <value>
                <fullName>Medication refill not ordered timely</fullName>
            </value>
            <value>
                <fullName>Person refused medication</fullName>
            </value>
            <value>
                <fullName>Wrong dose of medication given</fullName>
            </value>
            <value>
                <fullName>Newly prescribed order not initiated properly</fullName>
            </value>
            <value>
                <fullName>Missing medication</fullName>
            </value>
            <value>
                <fullName>Medication administration record not accurately documented</fullName>
            </value>
            <value>
                <fullName>Incorrect Route</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>